2025-rp/4-ingress-wip/test-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-test-service
  namespace: monitoring
spec:
  selector:
    app: monitoring-test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
